syntax = "proto3";
import "google/protobuf/timestamp.proto";
option java_multiple_files = true;
option java_package = "org.treequery.proto";
option java_outer_classname = "TreeQueryProto";
option objc_class_prefix = "HC";

service TreeQueryService {
    // Sends a healthCheck
    rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
}

message HealthCheckRequest {
    string service = 1;
}

message HealthCheckResponse {
    enum ServingStatus {
        UNKNOWN = 0;
        SERVING = 1;
        NOT_SERVING = 2;
    }
    ServingStatus status = 1;
}